--- a/app/src/main/res/layout/activity_create_public_event.xml
+++ b/app/src/main/res/layout/activity_create_public_event.xml
@@ -65,11 +65,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/title_endTime"
         android:id="@+id/textView"
-        android:layout_alignTop="@+id/title_startTime"
-        android:layout_alignRight="@+id/title_CreateNewEvent"
-        android:layout_alignEnd="@+id/title_CreateNewEvent" />
+        android:layout_below="@+id/date"
+        android:layout_alignRight="@+id/nextButton"
+        android:layout_alignEnd="@+id/nextButton" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/start_time"
@@ -80,7 +80,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/end_time"
@@ -103,7 +103,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/eventName"
@@ -133,7 +133,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/des"
